[BugFix] Clean the JAVA_OPTS variable family in start_fe.sh (#47495)
Signed-off-by: Kevin Xiaohua Cai <caixiaohua@starrocks.com>
(cherry picked from commit bd497d3e8c34af867ee63284570ca6fd59032d52)

# Conflicts:
#	bin/start_fe.sh